# mastermind_natan

./: GUI.py  MasterMindAsked.py  pyproject.toml  test.py
.github/workflows/: quality.yml
src/nmastermind/: GUI.py
