[tool.poetry]
name = "natan-mastermind"
version = "0.1.0"
description = "Mastermind"
authors = ["natan"]
license = "LGPLv3"
packages = [
   { include = "nmastermind", from="src" }
]

[tool.poetry.scripts]
natan-mastermind = "nmastermind.GUI:main"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
